--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "next": "13.1.1",
+    "node-releases": "^2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^8.4.5"
