--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "next": "13.1.1",
+    "electron-to-chromium": "^1.4.284",
+    "fraction.js": "^4.2.0",
+    "next": "^13.1.2",
     "node-releases": "^2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
