--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
-<<<<<<< Updated upstream
+    "classname": "^0.0.0",
     "daisyui": "^2.46.1",
-=======
->>>>>>> Stashed changes
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
