--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
