--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^13.1.2",
     "node-releases": "^2.0.8",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
