--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emailjs/browser": "^3.10.0",
     "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
+    "@react-icons/all-files": "^4.1.0",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
     "electron-to-chromium": "^1.4.284",
     "firebase": "^9.15.0",
+    "flowbite": "^1.6.2",
     "fraction.js": "^4.2.0",
     "next": "^13.1.2",
     "node-releases": "^2.0.8",
