--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
+    "axios": "^1.2.3",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
     "electron-to-chromium": "^1.4.284",
