--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "aos": "^2.3.4",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
+    "dhtmlx-gantt": "^7.1.13",
     "electron-to-chromium": "^1.4.284",
     "firebase": "^9.15.0",
     "fraction.js": "^4.2.0",
     "next": "^13.1.2",
     "node-releases": "^2.0.8",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
