--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.10.0",
     "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
+    "@react-icons/all-files": "^4.1.0",
     "aos": "^2.3.4",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
