--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@next/font": "13.1.1",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
+    "date-fns": "^2.29.3",
     "electron-to-chromium": "^1.4.284",
     "firebase": "^9.15.0",
     "fraction.js": "^4.2.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
+    "next-connect": "^0.13.0",
     "node-releases": "^2.0.8",
     "react": "18.2.0",
+    "react-clock": "^4.0.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-time-picker": "^5.2.0",
     "react-wavify": "^1.7.0",
     "run-parallel": "^1.2.0",
     "swiper": "^8.4.5",
