redesign goal part

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@syncfusion/ej2-react-gantt": "^20.4.43",
+    "@tanstack/react-query": "^4.24.4",
     "aos": "^2.3.4",
     "axios": "^1.2.4",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
+    "date-fns": "^2.29.3",
     "dhtmlx-gantt": "^7.1.13",
     "electron-to-chromium": "^1.4.284",
     "firebase": "^9.15.0",
