--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@syncfusion/ej2-react-gantt": "^20.4.43",
+    "@tanstack/react-query": "^4.24.4",
     "aos": "^2.3.4",
     "axios": "^1.2.4",
     "classname": "^0.0.0",
