--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
     "@react-icons/all-files": "^4.1.0",
+    "chart.js": "^4.2.0",
     "classname": "^0.0.0",
     "daisyui": "^2.47.0",
     "electron-to-chromium": "^1.4.284",
     "firebase": "^9.15.0",
     "flowbite": "^1.6.2",
     "fraction.js": "^4.2.0",
-    "next": "^13.1.2",
+    "next": "^13.1.6",
     "node-releases": "^2.0.8",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.0",
