--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-google-charts": "^4.0.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-rx": "^2.1.3",
     "react-super-responsive-table": "^5.2.1",
     "react-wavify": "^1.7.0",
     "run-parallel": "^1.2.0",
