--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-google-charts": "^4.0.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
     "react-rx": "^2.1.3",
     "react-super-responsive-table": "^5.2.1",
     "react-wavify": "^1.7.0",
