--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-google-charts": "^4.0.0",
