--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-google-charts": "^4.0.0",
@@ -41,6 +42,7 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "react-rx": "^2.1.3",
+    "react-select": "^5.7.0",
     "react-super-responsive-table": "^5.2.1",
     "react-wavify": "^1.7.0",
     "run-parallel": "^1.2.0",
