--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.20.13",
     "@emailjs/browser": "^3.10.0",
+    "@floating-ui/dom": "^1.2.1",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
